# dispatch

./: Makefile.am  configure.ac  dispatch.pc.in  dispatch.spec.in
example/: Makefile.am  client.c  common.h  server.c
include/: dispatch.h
lib/: Makefile.am  conn.c  conn.h  dispatch.c  msg.c  types.c
m4/: README
python/: Makefile.am  _dsdispatch.c  dsdispatch.py
python/tests/: echo_server.py  runtests.py  sample_server_cli.py  test_echo_server.py  test_servers.py  test_threaded.py
